<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Measurements</string>
    <string name="Title">RF Measurements</string>
    <string name="action_settings">Settings</string>
    <string name="Area">Measuring Area Id</string>
    <string name="Measure">Measure</string>
    <string name="WifiMeasuremets">WiFi Number of Measurements</string>
    <string name="MagneticMeasuremets">Magnetic Number of Measurements</string>
    <string name="serverIP">Server IP</string>
    <string name="serverPort">Server Port</string>
    <string name="BtMeasurements">BT Number of Measurements</string>
    <string name="manually">Manually Measurement</string>
    <string name="screenOn">Keep Screen On</string>
    <string name="BleMeasuremets">BLE Number of Measurements</string>

</resources>
